--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -636,6 +636,25 @@
   number = {n/a}
 }
 
+@article{buckleyHumidityLeavesWhy2019,
+  title = {The Humidity inside Leaves and Why You Should Care: Implications of Unsaturation of Leaf Intercellular Airspaces},
+  shorttitle = {The Humidity inside Leaves and Why You Should Care},
+  author = {Buckley, Thomas N. and Sack, Lawren},
+  date = {2019},
+  journaltitle = {American Journal of Botany},
+  volume = {106},
+  pages = {618--621},
+  issn = {1537-2197},
+  doi = {10.1002/ajb2.1282},
+  url = {https://bsapubs.onlinelibrary.wiley.com/doi/abs/10.1002/ajb2.1282},
+  urldate = {2021-05-21},
+  annotation = {\_eprint: https://bsapubs.onlinelibrary.wiley.com/doi/pdf/10.1002/ajb2.1282},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QHLFEMNF\\Buckley and Sack - 2019 - The humidity inside leaves and why you should care.pdf},
+  keywords = {photosynthesis,stomata,stomatal conductance,transpiration,unsaturation},
+  langid = {english},
+  number = {5}
+}
+
 @book{campbell_introduction_1998,
   title = {An {{Introduction}} to {{Environmental Biophysics}}},
   author = {Campbell, G. and Norman, J.},
@@ -7398,7 +7417,7 @@
   number = {2-3}
 }
 
-@article{tibbittsHumidityPlants1979,
+@article{tibbittsHumidityPlants1979b,
   title = {Humidity and {{Plants}}},
   author = {Tibbitts, Theodore W.},
   date = {1979},
@@ -7411,6 +7430,7 @@
   abstract = {Humidity levels control directly the rate of transpirational water loss and stomatal aperture of plants. Thus, humidity regulates photosynthetic rates, tissue temperatures, plant water potentials, and concentrations of Ca in certain tissues. Humidity also controls water taken in by tissues through condensation and direct vapor uptake.},
   eprint = {1307692},
   eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3KV9YMPR\\Tibbitts - 1979 - Humidity and Plants.pdf},
   number = {6}
 }
 
