--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -165,7 +165,7 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 
 ### Air temperature 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).**
-The $T_{air}$ difference between understory and canopy vary based on multiple factors such as radiation, local topography, vertical air mixing and cloud cover [*Defrenne et al. 2021*].Dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies, where dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
+The $T_{air}$ difference between understory and canopy vary based on multiple factors such as radiation, local topography, vertical air mixing and cloud cover [*Defrenne et al. 2021*].Dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies. Therefore, dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
 
 Seasonally, canopy buffering capacity is greater in wet than dry seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. Whereas in colder conditions, dense-canopy understories experience higher minimum temperatures [$T_{min}$] relative to open-canopy understories and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017].
 
@@ -195,29 +195,31 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when leaf water demand exceeds water transport, driven by irradiance, $T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
+This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].During $gs$, evapotranspiration facilitates heat dissipation. But when leaf water demand exceeds water transport, driven by irradiance, $T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
 
-Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$ [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
-High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, through smaller $g_a$, which increases $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
+High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, through smaller $g_a$, which increases $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]
+
+Leaf interiors are typically at maximum $RH$ [@buckleyHumidityLeavesWhy2019], hence when atmospheric $RH$ is lower, leaf to air evapotranspiration increases, decreasing $T_{leaf}$-$T_{air}$. Whereas when atmospheric $RH$ increases, leaf evapotranspiration and heat-dissapation is stifled, resulting in  greater $T_{leaf}$-$T_{air}$ [@songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018].
+
+**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to higher $ga$ than larger leaves, therefore maintain lower $T_{leaf}$-$T_{air}$ than large leaves that experience greater $T_{leaf}$-$T_{air}$. With adequate water, species with smaller leaves and larger $gs$ will be most effective at cooling during high temperatures, whereas species with larger exposed-leaves can experience greater $T_{leaf}$-$T_{air}$ and heat stress [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
- Inherent leaf $gs$ is typically greater across species exposed sun-leaves due to stomata density than shade leaves. However, because factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@songTreeSurfaceTemperature2020].
+ Inherent leaf $gs$ is typically greater across species exposed sun-leaves due to stomata density than shade leaves [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
 
-**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to higher $ga$ than larger leaves, therefore maintain lower $T_{leaf}$-$T_{air}$ than large leaves that experience greater $T_{leaf}$-$T_{air}$. With adequate water, species with smaller leaves and greater $gs$ will be most effective at cooling during high temperatures, whereas species with larger exposed-leaves can experience greater $T_{leaf}$-$T_{air}$ and heat stress [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007]
-
-Lastly, canopy structure and architecture also influence canopy temperature [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
+Lastly, canopy structure and architecture also influence canopy temperature  [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
 
 ### In-situ observations
 **The principles outlined above, vertical microclimate profile (Fig. `r fig_NEON_vertical`) and leaf traits (see following section) together shape in-situ $T_{leaf}$ observations (Fig. `r fig_leaf_T`).** 
 In open forests with lower buffering capacity, lower-canopy $T_{leaf}$ is greater than upper canopy, due to vertical air mixing, greater light permeability, still air in the lower canopy and heating from the ground can collectively increase $T_{leaf}$ [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. Similarly, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
-Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$  relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
+Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** 
 Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies from $gs$ limitation, than buffered lower-canopies [@doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016]. 
 Greater light input in exposed upper-canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$, making upper-canopies highly susceptible to heat stress [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. 
-Comparing forests, upper canopies of temperate deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007]
+Comparing forests, upper canopies of temperate deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007].
 
 
 ## Leaf traits 
