--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -201,12 +201,12 @@ Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to 
 
 High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, through smaller $g_a$, which increases $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]
 
-Leaf interiors are typically at maximum $RH$ [@buckleyHumidityLeavesWhy2019], hence when atmospheric $RH$ is lower, leaf to air evapotranspiration increases, decreasing $T_{leaf}$-$T_{air}$. Whereas when atmospheric $RH$ increases, leaf evapotranspiration and heat-dissapation is stifled, resulting in  greater $T_{leaf}$-$T_{air}$ [@songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018].
+Leaf interiors are typically $RH$ saturated [@buckleyHumidityLeavesWhy2019], hence when atmospheric $RH$ is lower, leaf to air evapotranspiration increases, decreasing $T_{leaf}$-$T_{air}$. Whereas when atmospheric $RH$ increases, leaf evapotranspiration and heat-dissapation is stifled, resulting in  greater $T_{leaf}$-$T_{air}$ [@songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018].
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to higher $ga$ than larger leaves, therefore maintain lower $T_{leaf}$-$T_{air}$ than large leaves that experience greater $T_{leaf}$-$T_{air}$. With adequate water, species with smaller leaves and larger $gs$ will be most effective at cooling during high temperatures, whereas species with larger exposed-leaves can experience greater $T_{leaf}$-$T_{air}$ and heat stress [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
- Inherent leaf $gs$ is typically greater across species exposed sun-leaves due to stomata density than shade leaves [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
+ Inherent leaf $gs$ is generally greater across species exposed sun-leaves due to stomata density than shade leaves [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
 
 Lastly, canopy structure and architecture also influence canopy temperature  [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
 
@@ -257,7 +257,7 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves invest more in light capture than in heat dissipation, with lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaf differences in canopy orientations are shaped based on canopy $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a].
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Whereas, shaded leaves invest more in light capture than in heat dissipation, with lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaf differences in canopy orientations are shaped by canopy $T_{air_{max}}$ and $VPD$ stress than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### Biochemical and physiological traits
 
@@ -272,11 +272,11 @@ Across forest species, widely, show fundamental trait adaptation to light gradie
 
 ##### *Leaf lifespan*  
 
-New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger than mature leaves, due to devoloping traits that can acclimate. Whereas, change in light for mature leaves can result in leaf abscission [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
+New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger than mature leaves, due to devoloping traits that can acclimate. Whereas, change in longterm-light for mature leaves can result in leaf abscission [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
 
 ##### *Deciduousness*
 
-Deciduousness as a trait is an adaptation to water and heat stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000b]. Hence, deciduous leaf-loss can influence biophysical gradient and $T_{leaf}$ [@rey-sanchez_spatial_2016]. Spatio-temporal leaf-emergence in deciduous-temperate forests also shapes biophysical gradient where leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
+Deciduousness as a trait is an adaptation to water and heat stress. Indeed, greater proportion of deciduous species are found in drier tropical regions than wetter. Among tropical species individuals that can be deciduous, greater proportion are in larger size classes than understory species that are seldom deciduous [@conditQuantifyingDeciduousnessTropical2000b]. Hence, deciduous leaf-loss can influence biophysical gradient and $T_{leaf}$ [@rey-sanchez_spatial_2016]. Spatio-temporal leaf-emergence in deciduous-temperate forests also shape biophysical gradient where leaf-emergence is delayed with height-ontogeny with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
 
 
 
@@ -297,7 +297,7 @@ nocite: |
 
 ### Stomatal conductance
 
-$Gs$ mediates crucial leaf-atmosphere interactions across species.With exposed-sun-leaves, though equipped with thermoregulatory effiency are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Where maximum transpiration rate and $gs$ peaks during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines during midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
+Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Where evapotranspiration and $gs$ peaks during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines during midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. While specie-specific differences in $T_{opt}$ of $gs$ can influence their photosynthetic heat tolerance; exactly how, remains understudied [@perezPhotosyntheticHeatTolerances2020].  
 
 ### Photosynthesis
 
@@ -309,9 +309,9 @@ In response to the greater light availability, sun-leaves have traits allowing g
 $T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
+Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018]. *We [-nidhi, for now] hypothesize that the phenotypic-plastic nature of leaf investment in area-to-mass traits across a vertical gradient stablizes photosynthetic $T_{opt}$. Where as, across species photosynthetic $T_{opt}$ might vary more*    
 
-**Leaf thermal tolerance (Tcrit/ T50)**
+**Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
 
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. 
 
