--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -157,7 +157,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under broad-leaf and mixed forests where light reaching forest floors, incident to canopy-tops range from ~1-2% to 4-5%, respectively [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006] compared to needle-leaf forest floors that receive ~17-34% [@baldocchiSeasonalVariationEnergy1997]. Sunflecks, offer another light source for shaded forest regions, caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
+Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under dense canopies, including broad-leaf and mixed forests, than open canopy forests such as needle-leaf forests [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. Sunflecks, offer another light source for shaded forest regions, caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
@@ -165,13 +165,13 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 
 ### Air temperature 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).**
-The $T_{air}$ difference between understory and canopy vary based on multiple factors such as radiation, local topography, vertical air mixing and cloud cover [*Defrenne et al. 2021*].Dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies. Therefore, dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
+The $T_{air}$ gradient along canopies and understories vary with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [*Defrenne et al. 2021*]. Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies. Therefore, dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
 
 Seasonally, canopy buffering capacity is greater in wet than dry seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. Whereas in colder conditions, dense-canopy understories experience higher minimum temperatures [$T_{min}$] relative to open-canopy understories and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017].
 
 ### Humidity and evaporative demand
 **Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
-Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit [$VPD$]--the driving force of water loss from a leaf-- tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Increased tree height [upto 20m with higher LAI] can also lower mean and max temperature and $VPD$ in the understory. Beyond a certain tree-height, the offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
+Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. $RH$, in combination with temperature, determines vapor pressure deficit [$VPD$]--the driving force of water loss from a leaf-- tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Increased tree height [upto 20m with higher LAI] can also lower mean and max temperature and $VPD$ in the understory, beyond a certain height the offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
 
 ### Carbon dioxide
 
@@ -195,15 +195,15 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].During $gs$, evapotranspiration facilitates heat dissipation. But when leaf water demand exceeds water transport, driven by irradiance, $T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
+This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. During $gs$, evapotranspiration facilitates heat dissipation. But when leaf water demand exceeds water transport, driven by irradiance, $T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
 
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
-High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, through smaller $g_a$, which increases $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]
+High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]
 
-Leaf interiors are typically $RH$ saturated [@buckleyHumidityLeavesWhy2019], hence when atmospheric $RH$ is lower, leaf to air evapotranspiration increases, decreasing $T_{leaf}$-$T_{air}$. Whereas when atmospheric $RH$ increases, leaf evapotranspiration and heat-dissapation is stifled, resulting in  greater $T_{leaf}$-$T_{air}$ [@songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018].
+Leaf interiors are $RH$ saturated [@buckleyHumidityLeavesWhy2019], hence when atmospheric $RH$ is lower, leaf to air evapotranspiration increases, decreasing $T_{leaf}$-$T_{air}$. Whereas when atmospheric $RH$ increases, leaf evapotranspiration and heat-dissapation is stifled, resulting in  greater $T_{leaf}$-$T_{air}$ [@songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts].
 
-**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to higher $ga$ than larger leaves, therefore maintain lower $T_{leaf}$-$T_{air}$ than large leaves that experience greater $T_{leaf}$-$T_{air}$. With adequate water, species with smaller leaves and larger $gs$ will be most effective at cooling during high temperatures, whereas species with larger exposed-leaves can experience greater $T_{leaf}$-$T_{air}$ and heat stress [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007]
+**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to smaller $ga$ than larger leaves that take longer due to large $ga$. Therefore, $T_{leaf}$-$T_{air}$ is lower for small leaves than large leaves that can exprience greater $T_{leaf}$-$T_{air}$. With adequate water, species with smaller leaves and larger $gs$ will be most effective at cooling during high temperatures than large leaf species [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
  Inherent leaf $gs$ is generally greater across species exposed sun-leaves due to stomata density than shade leaves [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
@@ -261,7 +261,7 @@ Exposed-canopy leaves are better adapted to heat and water stress than shaded-le
 
 #### Biochemical and physiological traits
 
-The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition in sun- and, shade-leaves during sunflecks, under available soil nitrogen [@kitaoCanopyNitrogenDistribution2018].Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb increasing temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
+The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition in along sun-leaves and, shade-leaves during sunflecks [@kitaoCanopyNitrogenDistribution2018]. Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb increasing temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed-canopies, making these species particularly advantageous [*REF*].
 
 ### Interspecific variation 
 
@@ -309,7 +309,9 @@ In response to the greater light availability, sun-leaves have traits allowing g
 $T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018]. *We [-nidhi, for now] hypothesize that the phenotypic-plastic nature of leaf investment in area-to-mass traits across a vertical gradient stablizes photosynthetic $T_{opt}$. Where as, across species photosynthetic $T_{opt}$ might vary more*    
+Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
+
+Interestingly, within canopy Japanese oak sun and shade leaves under respective peak light conditions were found to maintain similar rate of excess energy production. Excessive light energy not utilized can cause photoinhibition.Thus, sun leaves utilize this excess energy through high electron transport rate ($ETR$) and thermal dissapation, whereas shade leaves compensate for low $ETR$ by adjusting their $N_{area}$ to maintain high photosythetic capacity than those required to maximize C net gain, a suggested mechanism for cirucmventing photoinihition and thermal dissaptation under sunflecks [@kitaoLeavesJapaneseOak2012; @kitaoCanopyNitrogenDistribution2018]. Perhaps, differences in these thermal stablization strategies realizes similar $T_{opt}$ for photosynthesis in sun and shade leaves. 
 
 **Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
 
