--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -219,7 +219,7 @@ Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** 
 Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies from $gs$ limitation, than buffered lower-canopies [@doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016]. 
 Greater light input in exposed upper-canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$, making upper-canopies highly susceptible to heat stress [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. 
-Comparing forests, upper canopies of temperate deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007].
+Comparing forests, upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018].
 
 
 ## Leaf traits 
