--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -294,7 +294,7 @@ nocite: |
 
 ### Stomatal conductance
 
-Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Where evapotranspiration and $gs$ peaks during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines during midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. While specie-specific differences in $T_{opt}$ of $gs$ can influence their photosynthetic heat tolerance; exactly how, remains understudied [@perezPhotosyntheticHeatTolerances2020].  
+Exposed-sun-leaves, though equipped with thermoregulatory traits are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Where evapotranspiration and $gs$ peaks during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines during midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. While specie-specific differences in $T_{opt}$ of $gs$ can influence their photosynthetic heat tolerance indirectly; exactly how, remains understudied [@perezPhotosyntheticHeatTolerances2020].  
 
 ### Photosynthesis
 
@@ -303,7 +303,7 @@ This is primarily driven by the greater light available to sun-leaves. Photosynt
 
 In response to the greater light availability, sun-leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy).The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P (and water availability).
 
-$T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
+Temperature can affect photosynthesis via direct and indirect pathways. Direct, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increase in $T_{leaf}$ from $gs$ closure that is driven by biophysical factors [@lloydEffectsRisingTemperatures2008]. $T_{leaf}$ beyond photosynthetic $T_{opt}$, declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing $T_{leaf}$ (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Leaf heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020].  
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
 Biophysically, we might expect sun-leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), where earlier evidence showed that $T_{opt}$ of $J_{max}$ increased with irradiance in an upper-canopy leaf compared to shaded lower-canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
